sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: '=' expected but ';' found.
  while(ecart>1 || n==1 ){
^